syntax = "proto3";

package common;

service HealthCheckService {
    rpc HealthCheck (Ping) returns (Pong) {}
}

message Ping {
}

message Pong {
}