syntax = "proto3";

package protos;

message User {
    int32 id = 1;
    string name = 2;
    string surname = 3;
    string email = 4;
    int32 lastAccess = 5;
}

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc Healthcheck (Ping) returns (Pong);
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message Ping {
}

message Pong {
    string response = 1;
}